[package]
name = "iron_exec"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "iron_exec"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.27.1", features = ["process"] }
log = "0.4.20"
env_logger = "0.10.1"
async-trait = "0.1.74"
serde = { version = "1", features = ["derive"] }
config = "0.13.4"
syscalls = "0.6.15"

[dev-dependencies]
claim = "0.5.0"
